--- a/sass/_metric.scss
+++ b/sass/_metric.scss
@@ -41,7 +41,9 @@
 		height: 180px;
 		margin: 0 auto;
 		border-radius: 100%;
+	    border: 3px solid #333f48;
 	}
+
 	.number-wrapper {
 		margin-top: 55px;		
 	}
@@ -51,6 +53,9 @@
 	}
 	.unit {
 		color: #666;
+	}
+  	.metric-value {
+	  margin-top: 50px;
 	}
 	.metric-content {
 		display: flex;
